--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "CortexNetworkTestApp/vendor/lwip"]
-	path = CortexNetworkTestApp/vendor/lwip
-	url = https://github.com/CFXS/lwip.git
 [submodule "CMake"]
 	path = CMake
 	url = https://github.com/CFXS/CFXS-CMake-Bare-Metal-Toolchain.git
+[submodule "CortexNetworkTestApp/vendor/tm4c-driverlib"]
+	path = CortexNetworkTestApp/vendor/tm4c-driverlib
+	url = https://github.com/CFXS/TM4C-driverlib.git
