--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/CFXS/lwip.git
 [submodule "CortexNetworkTestApp/vendor/CFXS/Base"]
 	path = CortexNetworkTestApp/vendor/CFXS/Base
-	url = https://github.com/CFXS/Base.git
+	url = https://github.com/CFXS/CFXS-Base.git
