--- a/CortexNetworkTestApp/CMakeLists.txt
+++ b/CortexNetworkTestApp/CMakeLists.txt
@@ -1,7 +1,7 @@
 include("${PROJECT_SOURCE_DIR}/CMake/Target/CortexM4F.cmake")
 include("_Sources.cmake")
 
-set(CMAKE_UNITY_BUILD false)
+set(CMAKE_UNITY_BUILD true)
 set(CMAKE_UNITY_BUILD_BATCH_SIZE 16)
 
 set(EXE_NAME CortexNetworkTestApp)
@@ -21,8 +21,6 @@ add_compile_options(
     
     -Wl,--gc-sections # remove unused sections
     
-    -fpermissive
-
     -Wall
     -Wextra
     -Wcast-align
@@ -39,9 +37,12 @@ add_compile_options(
     -Wno-shift-negative-value
     -Wno-cast-align
     -Wno-write-strings
-    -Wno-literal-suffix
-    -Wno-register
     -Wno-tautological-compare
+
+    $<$<COMPILE_LANGUAGE:CXX>:-Wno-literal-suffix>
+    $<$<COMPILE_LANGUAGE:CXX>:-Wno-register>
+    $<$<COMPILE_LANGUAGE:CXX>:-fpermissive>
+    
 
     #-fdebug-prefix-map="${CMAKE_SOURCE_DIR}"=.
 )
@@ -54,6 +55,8 @@ include_directories(${EXE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/_config/l
 include("_Modules.cmake")
 
 target_compile_definitions(${EXE_NAME} PUBLIC PART_TM4C1294NCPDT TARGET_IS_TM4C129_RA2)
+
+target_compile_options(${EXE_NAME} PRIVATE "-flto")
 
 target_precompile_headers(
     ${EXE_NAME}
@@ -73,10 +76,9 @@ target_link_options(
     ${CPU_OPTIONS}
     SHELL:-T${LINKER_SCRIPT}
     -Xlinker -Map=output.map
-    -o${EXE_NAME}.elf.
 )
 
 add_custom_command(TARGET ${EXE_NAME} POST_BUILD
-    COMMAND objcopy -S -O binary ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}.elf ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}.bin)
+    COMMAND objcopy -S -O binary ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}/${EXE_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}.bin)
 add_custom_command(TARGET ${EXE_NAME} POST_BUILD
-    COMMAND nm --print-size --size-sort --format=bsd --radix=d ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}.elf > ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}_Symbols.txt)
+    COMMAND nm --print-size --size-sort --format=bsd --radix=d ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}/${EXE_NAME} > ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}_Symbols.txt)
