prep for refac + lwip tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,7 +53,8 @@
         "istream": "cpp",
         "driverlib_includes.hpp": "c",
         "gpio.h": "c",
-        "epi.h": "c"
+        "epi.h": "c",
+        "udma.h": "c"
     },
     "cmake.buildDirectory": "${workspaceFolder}/build",
     "editor.tokenColorCustomizations": {
