fix post build step in linux
Signed-off-by: RVeips <rihardsveips@gmail.com>

--- a/CortexNetworkTestApp/CMakeLists.txt
+++ b/CortexNetworkTestApp/CMakeLists.txt
@@ -78,7 +78,9 @@ target_link_options(
     -Xlinker -Map=output.map
 )
 
+set_target_properties(${EXE_NAME} PROPERTIES SUFFIX ".elf")
+
 add_custom_command(TARGET ${EXE_NAME} POST_BUILD
-    COMMAND objcopy -S -O binary ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}/${EXE_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}.bin)
+    COMMAND ${OBJCOPY} -S -O binary ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}/${EXE_NAME}.elf ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}.bin)
 add_custom_command(TARGET ${EXE_NAME} POST_BUILD
-    COMMAND nm -l --print-size --size-sort --format=bsd --radix=x ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}/${EXE_NAME} > ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}_Symbols.txt)
+    COMMAND ${NM} -l --print-size --size-sort --format=bsd --radix=x ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}/${EXE_NAME} > ${CMAKE_CURRENT_SOURCE_DIR}/../build/${EXE_NAME}_Symbols.txt)
